--- a/frontend/src/scss/base/_typography.scss
+++ b/frontend/src/scss/base/_typography.scss
@@ -2,7 +2,7 @@
 @use "sass:math";
 
 body {
-  font-family: "Inter", var(--font-fallback);
+  font-family: InterVariable, var(--font-fallback);
   font-size: 1rem;
   line-height: 1.5;
 }
@@ -10,4 +10,10 @@ body {
 h1, .h1{
   font-size: rem(42);
   line-height: math.div(54,42);
+}
+
+@supports (font-variation-settings: normal) {
+  body {
+    font-family: InterVariable, var(--font-fallback);
+  }
 }
